fix z-index

--- a/src/components/Grid.module.css
+++ b/src/components/Grid.module.css
@@ -15,9 +15,7 @@
   top: 0%;
   left: 0%;
   pointer-events: none;
-  z-index: 10;
   margin: 0 3%;
-  box-sizing: border-box;
 }
 
 .bottomBar {
